# nufftax

./: pyproject.toml
benchmarks/: bench_pallas_vs_jax.py  bench_threshold.py
nufftax/: __init__.py
nufftax/core/: pallas_spread.py  spread.py
nufftax/transforms/: autodiff.py  nufft1.py  nufft2.py  nufft3.py  primitives.py
tests/: test_adjoint.py  test_linear_solve.py  test_nufft3.py  test_pallas_3d.py
