[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nufftax"
version = "0.5.0"
description = "Pure JAX implementation of Non-Uniform FFT"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "Gragas", email = "contact@gragas.ai"},
    {name = "Geoffroy Oudoumanessah"},
    {name = "Jacopo Iollo"}
]
keywords = ["jax", "fft", "nufft", "non-uniform", "fourier-transform", "autodiff"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "jax>=0.4.0",
    "numpy>=1.20,!=2.4.0",
]

[project.optional-dependencies]
cuda12 = ["jax[cuda12]>=0.4.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "finufft>=2.0",  # For comparison testing
    "ruff>=0.4.0",
    "pre-commit>=3.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-book-theme>=1.0",
    "sphinx-autobuild>=2024.0",
    "myst-nb>=1.0",
    "sphinx-autodoc-typehints>=1.24",
    "sphinx-design>=0.5",
    "sphinx-copybutton>=0.5",
    "sphinx-togglebutton>=0.3",
    "matplotlib>=3.5",
    "scipy>=1.9",
]

[project.urls]
Homepage = "https://github.com/GragasLab/nufftax"
Documentation = "https://nufftax.readthedocs.io"
Repository = "https://github.com/GragasLab/nufftax"

[tool.setuptools.packages.find]
where = ["."]
include = ["nufftax*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    # Suppress JAX scatter dtype promotion warning - occurs when x64 mode is enabled globally
    # (by test_nufft3.py for FINUFFT comparison) and float32 computations mix with float64 constants.
    # This is a FutureWarning and doesn't affect correctness; dtype promotion is handled correctly.
    "ignore:scatter inputs have incompatible types:FutureWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 119

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "I",      # isort
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "FURB",   # refurb
    "SIM",    # flake8-simplify
    "S110",   # bandit: try-except-pass
    "C4",     # flake8-comprehensions
    "RUF013", # implicit Optional
    "PERF102",# dict.items() discarding key or value
    "PLC1802",# len in boolean test
    "PLC0208",# iteration over set literals
    "PIE794", # duplicate field definitions
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E741",   # ambiguous variable name (l, O, I)
    "SIM1",   # all SIM1XX rules
    "SIM905", # static str.split replaceable with list literal
    "UP015",  # redundant open mode
    "UP031",  # printf-style string formatting
]
extend-safe-fixes = [
    "UP006",  # generic replacements per PEP 585
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]
"*.ipynb" = ["E402", "E731", "B007", "N816"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["nufftax"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
